--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "echo 'No build step required'"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "socket.io": "^4.7.5"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
